feat: reconcile traffic by subscription
